fix overflow tasklist

--- a/kanban/css/board.task.css
+++ b/kanban/css/board.task.css
@@ -5,6 +5,11 @@
   min-height: 0px;
 }
 
+.task-view input {
+  max-height: 32px;
+  min-height: 32px;
+}
+
 .task-list {
   width: 226px;
   min-height: 50px;
